fix: Weapon icons not visible while using light theme

--- a/src/app/routes/resonators/resonators.component.scss
+++ b/src/app/routes/resonators/resonators.component.scss
@@ -120,3 +120,7 @@
 
 	transition: opacity 0.5s;
 }
+
+.filter__weapon-icon {
+	mix-blend-mode: difference;
+}
